--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="welcome-text">
         <h1>Hello and Welcome to BT Prime Estates! Your dream home awaits</h1>
         <p>We turn real estate dreams into reality at BT Prime Estates. We offer a variety of residential and commercial 
-           properties providing expert guidance and ensuringstress-free experience for buyers and sellers.</p>
+           properties providing expert guidance and ensuring stress-free experience for buyers and sellers.</p>
     </section>
     
     <section class="hero">
@@ -68,6 +68,9 @@
     <div class="chat-button">
         <a href="about.html">ENQUIRE NOW</a>
     </div>
+    <footer>
+        <p>&copy; 2025 Boitumelo Tlhaselo</p>
+    </footer>
 </body>
 </html>
 
