--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
                 <li><a href="property-listing.html">Properties</a></li>
-                <li><a href="Faq.html">Faq</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="conact.html">Contact</a></li>
+                <li><a href="faq.html">Faq</a></li>
             </ul>
         </nav>
     </header>
