--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="property-listing.html">Properties</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="conact.html">Contact</a></li>
-                <li><a href="faq.html">Faq</a></li>
+                <li><a href="FAQ.html">FAQ</a></li>
             </ul>
         </nav>
     </header>
