--- a/property-listing.html
+++ b/property-listing.html
@@ -14,5 +14,12 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
            <li><a href="contact.html">Contact</a></li>
+            <li><a href="FAQ.html">FAQ</a></li> 
         </ul>
-    </nav>
+      </nav>
+    </header>
+
+    <section class="property-listings">
+        <div class="property"
+          <img src="
+   
