--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <section class="buttons">
         <button onclick="location.href='residential-sale.html'">Residential for Sale</button>
         <button onclick="location.href='residential-rent.html'">Residential for Rent</button>
-        <button onclick="location.href='commercial-sale.html'">Commercial / Industrial for Sale</button>
-        <button onclick="location.href='commercial-rent.html'">Commercial / Industrial for Rent</button>
+        <button onclick="location.href='commercial-sale.html'">Commercial for Sale</button>
+        <button onclick="location.href='commercial-rent.html'">Commercial for Rent</button>
         <button onclick="location.href='plots-sale.html'">Plots for Sale</button>
     </section>
 
