--- a/residential-sale.html
+++ b/residential-sale.html
@@ -26,9 +26,19 @@
         <img src="https://images.pamgolding.co.za/content/properties/a/202105/1825494/h/1825494_h_6.jpg?w=600&quality=75" alt="House 1 - Front View">
          <img src="https://images.pamgolding.co.za/content/properties/a/202105/1825494/h/1825494_h_5.jpg?w=600&quality=75" class="slide" alt="House 1 -House 1 - Front view">
         <img src="https://images.pamgolding.co.za/content/properties/a/202105/1825494/h/1825494_h_7.jpg?w=600&quality=75" class="slide active" alt="House 1 - Living Room">
-        <img src="https://i.pinimg.com/736x/d5/a0/67/d5a0673c2428fc4681a664273c899a61.jpg" alt= "House 1 - Living Room">
-        <img scr="https://i.pinimg.com/736x/4e/85/11/4e8511a1a1e36f1fa819178369555dfb.jpg" alt="House 1 - Kitche">
-    </div>
+        <img src="https://i.pinimg.com/736x/4e/85/11/4e8511a1a1e36f1fa819178369555dfb.jpg" alt= "House 1 - Living Room">
+        <img scr="https://i.pinimg.com/736x/bb/4d/c1/bb4dc1a1e018a20f8d8fd1824c10ed33.jpg" alt="House 1 - Kitche">
+        <img scr="https://i.pinimg.com/736x/ed/1d/ba/ed1dba18066c4d9bb1f6c0ccc3cd840d.jpg" alt="House 1 - Kitchen">
+        <img scr="https://i.pinimg.com/736x/77/61/a1/7761a138f2e40d75a8de57d7a602f2b4.jpg" alt="House 1 - Bedroom">
+        <img scr="https://i.pinimg.com/736x/8d/dc/31/8ddc318114e69fc56ceab6cbf43d4e30.jpg" alt="House 1 -Bathroom">
+        <img scr="https://i.pinimg.com/736x/93/1c/52/931c52810c025f1958a002aa9bc965d9.jpg" alt=House 1 - Bedroom">
+        <img scr= 
+        <img scr=
+        <img scr=    
+        <img scr=   
+        <img scr=    
+     
+        </div>
         
             <p>📍 Location: Phakalane Golf Estate</p>
             <p>💰 Price: P8,000,000</p>
