--- a/residential-sale.html
+++ b/residential-sale.html
@@ -23,18 +23,18 @@
         <div class="property">
             <div class="property">
     <div class="carousel">
-        <img src="https://images.pamgolding.co.za/content/properties/a/202105/1825494/h/1825494_h_6.jpg?w=600&quality=75" alt="House 1 - Front View">
-         <img src="https://images.pamgolding.co.za/content/properties/a/202105/1825494/h/1825494_h_5.jpg?w=600&quality=75" class="slide" alt="House 1 -House 1 - Front view">
-        <img src="https://images.pamgolding.co.za/content/properties/a/202105/1825494/h/1825494_h_7.jpg?w=600&quality=75" class="slide active" alt="House 1 - Living Room">
-        <img src="https://i.pinimg.com/736x/4e/85/11/4e8511a1a1e36f1fa819178369555dfb.jpg" alt= "House 1 - Living Room">
-        <img scr="https://i.pinimg.com/736x/bb/4d/c1/bb4dc1a1e018a20f8d8fd1824c10ed33.jpg" alt="House 1 - Kitchen">
-        <img scr="https://i.pinimg.com/736x/ed/1d/ba/ed1dba18066c4d9bb1f6c0ccc3cd840d.jpg" alt="House 1 - Kitchen">
-        <img scr="https://i.pinimg.com/736x/77/61/a1/7761a138f2e40d75a8de57d7a602f2b4.jpg" alt="House 1 - Bedroom">
-        <img scr="https://i.pinimg.com/736x/8d/dc/31/8ddc318114e69fc56ceab6cbf43d4e30.jpg" alt="House 1 -Bathroom">
-        <img scr="https://i.pinimg.com/736x/93/1c/52/931c52810c025f1958a002aa9bc965d9.jpg" alt=House 1 - Bedroom">
-        <img scr="https://i.pinimg.com/736x/cd/7a/a0/cd7aa0e6f2adafa36eceba458090021b.jpg" alt=House 1 - Wardrobe>
-        <img scr="https://i.pinimg.com/736x/d2/15/79/d215790c349fca45cc1aa91047d09c90.jpg" alt="House 1 - Garage">
-        <img scr="https://i.pinimg.com/736x/6c/58/ba/6c58ba7ca27ddf459ee13a6e103fb7f3.jpg" alt="House 1 - Back View">    
+        <img src="https://images.pamgolding.co.za/content/properties/a/202105/1825494/h/1825494_h_6.jpg?w=600&quality=75" class="slide active" alt="House 1 - Front View">
+         <img src="https://images.pamgolding.co.za/content/properties/a/202105/1825494/h/1825494_h_5.jpg?w=600&quality=75" class="slode" alt="House 1 -House 1 - Front view">
+        <img src="https://images.pamgolding.co.za/content/properties/a/202105/1825494/h/1825494_h_7.jpg?w=600&quality=75" class="slide" alt="House 1 - Living Room">
+        <img src="https://i.pinimg.com/736x/4e/85/11/4e8511a1a1e36f1fa819178369555dfb.jpg" class="slide" alt= "House 1 - Living Room">
+        <img scr="https://i.pinimg.com/736x/bb/4d/c1/bb4dc1a1e018a20f8d8fd1824c10ed33.jpg" class="slide"  alt="House 1 - Kitchen">
+        <img scr="https://i.pinimg.com/736x/ed/1d/ba/ed1dba18066c4d9bb1f6c0ccc3cd840d.jpg" class="slide"  alt="House 1 - Kitchen">
+        <img scr="https://i.pinimg.com/736x/77/61/a1/7761a138f2e40d75a8de57d7a602f2b4.jpg" class="slide"  alt="House 1 - Bedroom">
+        <img scr="https://i.pinimg.com/736x/8d/dc/31/8ddc318114e69fc56ceab6cbf43d4e30.jpg" class="slide"  alt="House 1 -Bathroom">
+        <img scr="https://i.pinimg.com/736x/93/1c/52/931c52810c025f1958a002aa9bc965d9.jpg" class="slide"  alt=House 1 - Bedroom">
+        <img scr="https://i.pinimg.com/736x/cd/7a/a0/cd7aa0e6f2adafa36eceba458090021b.jpg" class="slide"  alt=House 1 - Wardrobe>
+        <img scr="https://i.pinimg.com/736x/d2/15/79/d215790c349fca45cc1aa91047d09c90.jpg" class="slide"  alt="House 1 - Garage">
+        <img scr="https://i.pinimg.com/736x/6c/58/ba/6c58ba7ca27ddf459ee13a6e103fb7f3.jpg" class="slide"  alt="House 1 - Back View">    
          
          </div>
         
@@ -45,7 +45,23 @@
         </div>
 
         <div class="property">
-            <img src="https://images.pamgolding.co.za/content/properties/202501/2171413/h/2171413_h_10.jpg?w=600&quality=75" alt="Luxury Villa">
+            <div class="carousel">
+        <img src="https://i.pinimg.com/736x/38/d0/d0/38d0d0a562603411a02f12279a1cadc9.jpg" class="slide active"alt="House 2 - Front View">
+        <img src="https://i.pinimg.com/736x/2c/7d/86/2c7d86d9af75d5d21ae488cbd06a70d5.jpg" class="slide" alt="House 2 - Front view">
+        <img src="https://i.pinimg.com/736x/f4/fd/23/f4fd230c053f4fe0538453ec068fd7bb.jpg" class="slide" alt="House 2 - Living Room">
+        <img src="https://i.pinimg.com/736x/23/d0/fa/23d0fa2f734824a3f53bddd6a88a7f9b.jpg" class="slide" alt= "House 2 - Living Room">
+        <img scr="https://i.pinimg.com/736x/bb/4d/c1/bb4dc1a1e018a20f8d8fd1824c10ed33.jpg" class="slide" alt="House 2 - Kitchen">
+        <img scr="https://i.pinimg.com/736x/ed/1d/ba/ed1dba18066c4d9bb1f6c0ccc3cd840d.jpg" class="slide" alt="House 2 - Kitchen">
+        <img scr="https://i.pinimg.com/736x/77/61/a1/7761a138f2e40d75a8de57d7a602f2b4.jpg" class="slide" alt="House 2 - Bedroom">
+        <img scr="https://i.pinimg.com/736x/8d/dc/31/8ddc318114e69fc56ceab6cbf43d4e30.jpg" class="slide" alt="House 2 -Bathroom">
+        <img scr="https://i.pinimg.com/736x/93/1c/52/931c52810c025f1958a002aa9bc965d9.jpg" class="slide"alt=House 2- Bedroom">
+        <img scr="https://i.pinimg.com/736x/cd/7a/a0/cd7aa0e6f2adafa36eceba458090021b.jpg" class="slide" alt=House 2 - Bathroom>
+        <img scr="https://i.pinimg.com/736x/d2/15/79/d215790c349fca45cc1aa91047d09c90.jpg" class="slide" alt="House 2 - Theater Room">
+        <img scr="https://i.pinimg.com/736x/6c/58/ba/6c58ba7ca27ddf459ee13a6e103fb7f3.jpg" class="slide" alt="House 2 - Play Room">    
+         <img scr="https://i.pinimg.com/736x/cd/7a/a0/cd7aa0e6f2adafa36eceba458090021b.jpg" class="slide" alt=House 2 - Balcony>
+        <img scr="https://i.pinimg.com/736x/d2/15/79/d215790c349fca45cc1aa91047d09c90.jpg" class="slide" alt="House 2 - Side View">
+        <img scr="https://i.pinimg.com/736x/6c/58/ba/6c58ba7ca27ddf459ee13a6e103fb7f3.jpg" class="slide"alt="House 2 - Back View">  
+         </div>
             <h2>Luxury 6-Bedroom Villa</h2>
             <p>📍 Location: Block 6 Gaborone</p>
             <p>💰 Price: P9,500,000</p>
