residential-sale.html

--- a/residential-sale.html
+++ b/residential-sale.html
@@ -32,8 +32,9 @@
         <img scr="https://i.pinimg.com/736x/77/61/a1/7761a138f2e40d75a8de57d7a602f2b4.jpg" class="slide"  alt="House 1 - Bedroom">
         <img scr="https://i.pinimg.com/736x/8d/dc/31/8ddc318114e69fc56ceab6cbf43d4e30.jpg" class="slide"  alt="House 1 -Bathroom">
         <img scr="https://i.pinimg.com/736x/93/1c/52/931c52810c025f1958a002aa9bc965d9.jpg" class="slide"  alt=House 1 - Bedroom">
-        <img scr="https://i.pinimg.com/736x/cd/7a/a0/cd7aa0e6f2adafa36eceba458090021b.jpg" class="slide"  alt=House 1 - Wardrobe>
+        <img scr="https://i.pinimg.com/736x/cd/7a/a0/cd7aa0e6f2adafa36eceba458090021b.jpg" class="slide"  alt=House 1 - Wardrobe">
         <img scr="https://i.pinimg.com/736x/d2/15/79/d215790c349fca45cc1aa91047d09c90.jpg" class="slide"  alt="House 1 - Garage">
+        <img scr="https://i.pinimg.com/736x/3d/d5/1f/3dd51f508f5e6700f1911609843ff96d.jpg" class="slide"  alt="House 1 - Side View">
         <img scr="https://i.pinimg.com/736x/6c/58/ba/6c58ba7ca27ddf459ee13a6e103fb7f3.jpg" class="slide"  alt="House 1 - Back View">    
          
          </div>
@@ -50,17 +51,17 @@
         <img src="https://i.pinimg.com/736x/2c/7d/86/2c7d86d9af75d5d21ae488cbd06a70d5.jpg" class="slide" alt="House 2 - Front view">
         <img src="https://i.pinimg.com/736x/f4/fd/23/f4fd230c053f4fe0538453ec068fd7bb.jpg" class="slide" alt="House 2 - Living Room">
         <img src="https://i.pinimg.com/736x/23/d0/fa/23d0fa2f734824a3f53bddd6a88a7f9b.jpg" class="slide" alt= "House 2 - Living Room">
-        <img scr="https://i.pinimg.com/736x/bb/4d/c1/bb4dc1a1e018a20f8d8fd1824c10ed33.jpg" class="slide" alt="House 2 - Kitchen">
-        <img scr="https://i.pinimg.com/736x/ed/1d/ba/ed1dba18066c4d9bb1f6c0ccc3cd840d.jpg" class="slide" alt="House 2 - Kitchen">
-        <img scr="https://i.pinimg.com/736x/77/61/a1/7761a138f2e40d75a8de57d7a602f2b4.jpg" class="slide" alt="House 2 - Bedroom">
-        <img scr="https://i.pinimg.com/736x/8d/dc/31/8ddc318114e69fc56ceab6cbf43d4e30.jpg" class="slide" alt="House 2 -Bathroom">
-        <img scr="https://i.pinimg.com/736x/93/1c/52/931c52810c025f1958a002aa9bc965d9.jpg" class="slide"alt=House 2- Bedroom">
-        <img scr="https://i.pinimg.com/736x/cd/7a/a0/cd7aa0e6f2adafa36eceba458090021b.jpg" class="slide" alt=House 2 - Bathroom>
-        <img scr="https://i.pinimg.com/736x/d2/15/79/d215790c349fca45cc1aa91047d09c90.jpg" class="slide" alt="House 2 - Theater Room">
-        <img scr="https://i.pinimg.com/736x/6c/58/ba/6c58ba7ca27ddf459ee13a6e103fb7f3.jpg" class="slide" alt="House 2 - Play Room">    
-         <img scr="https://i.pinimg.com/736x/cd/7a/a0/cd7aa0e6f2adafa36eceba458090021b.jpg" class="slide" alt=House 2 - Balcony>
-        <img scr="https://i.pinimg.com/736x/d2/15/79/d215790c349fca45cc1aa91047d09c90.jpg" class="slide" alt="House 2 - Side View">
-        <img scr="https://i.pinimg.com/736x/6c/58/ba/6c58ba7ca27ddf459ee13a6e103fb7f3.jpg" class="slide"alt="House 2 - Back View">  
+        <img scr="https://i.pinimg.com/736x/00/f1/1a/00f11af7889db78d4f0b84144c6b0bc3.jpg" class="slide" alt="House 2 - Kitchen">
+        <img scr="https://i.pinimg.com/736x/57/a2/20/57a2208eb6ede7fe2871dadb5f1b26af.jpg" class="slide" alt="House 2 - Kitchen">
+        <img scr="https://i.pinimg.com/736x/8e/7d/24/8e7d248030890e1dff9615ad681dce31.jpg" class="slide" alt="House 2 - Bedroom">
+        <img scr="https://i.pinimg.com/736x/d0/27/c4/d027c4dc10f06ddbaba5536f0eda1b8c.jpg" class="slide" alt="House 2 -Bathroom">
+        <img scr="https://i.pinimg.com/736x/06/63/66/066366ae3b5700c69c731d5de5e52f09.jpg" class="slide"alt=House 2- Bedroom">
+        <img scr="https://i.pinimg.com/736x/f7/e0/df/f7e0dff4a2c20cf093aa48c3a8832a6c.jpg" class="slide" alt=House 2 - Bathroom">
+        <img scr="https://i.pinimg.com/736x/b9/3d/f5/b93df5a582c7d225b2d38ed3c1fbf486.jpg" class="slide" alt="House 2 - Theater Room">
+        <img scr="https://i.pinimg.com/736x/b3/a1/9b/b3a19bbbddb1bb6450885bb3c8799ca9.jpg" class="slide" alt="House 2 - Play Room">    
+         <img scr="https://i.pinimg.com/736x/d3/bf/5f/d3bf5f31d9e2b07cbf1421f3c77d7d6b.jpg" class="slide" alt=House 2 - Balcony>"
+        <img scr="https://i.pinimg.com/736x/f0/cd/dd/f0cdddc44449ec345eccfb0988bb0f26.jpgg" class="slide" alt="House 2 - Side View">
+        <img scr="https://i.pinimg.com/736x/92/bd/f2/92bdf291453ba306783b176f986810dd.jpg" class="slide"alt="House 2 - Back View">  
          </div>
             <h2>Luxury 6-Bedroom Villa</h2>
             <p>📍 Location: Block 6 Gaborone</p>
