--- a/house1-details.html
+++ b/house1-details.html
@@ -3,42 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>5-Bedroom Modern House Details</title>
+    <title>Luxury 5-Bedroom Home - Phakalane Golf Estate</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <header>
-        <h1>5-Bedroom Modern House</h1>
+        <h1>Luxury 5-Bedroom Home</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="residential-sale.html">Back to Listings</a></li>
-                <li><a href="contact.html">Contact Agent</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="property-details">
-        <div class="https://images.pamgolding.co.za/content/properties/a/202105/1825494/h/1825494_h_6.jpg?w=600&quality=75">
-            <img src="https://images.pamgolding.co.za/content/properties/a/202105/1825494/h/1825494_h_5.jpg?w=600&quality=75" alt="Front View">
-            <img src="house1-2.jpg" alt="Living Room">
-            <img src="house1-3.jpg" alt="Kitchen">
+        <div class="carousel">
+            <img src="https://images.pamgolding.co.za/content/properties/a/202105/1825494/h/1825494_h_6.jpg?w=600&quality=75" class="slide active" alt="Front View">
+            <img src="https://images.pamgolding.co.za/content/properties/a/202105/1825494/h/1825494_h_5.jpg?w=600&quality=75" class="slide" alt="Living Room">
+            <img src="https://i.pinimg.com/736x/bb/4d/c1/bb4dc1a1e018a20f8d8fd1824c10ed33.jpg" class="slide" alt="Kitchen">
         </div>
-        <h2>Property Details</h2>
-        <p><strong>📍 Location:</strong> Tlokweng</p>
-        <p><strong>💰 Price:</strong> $250,000</p>
-        <p><strong>🛏️ Bedrooms:</strong> 3</p>
-        <p><strong>🛁 Bathrooms:</strong> 2</p>
-        <p><strong>📏 Size:</strong> 200 sqm</p>
-        <p><strong>Description:</strong> This stunning 3-bedroom house is located in a prime area and features a spacious open-plan living room, modern kitchen, and a beautiful backyard.</p>
 
-        <a href="contact.html" class="btn message">Message Agent</a>
+        <h2>🏡 Property Details</h2>
+        <p><strong>📍 Location:</strong> Phakalane Golf Estate</p>
+        <p><strong>💰 Price:</strong> P8,300,000</p>
+        <p><strong>🛏️ Bedrooms:</strong> 5</p>
+        <p><strong>🛁 Bathrooms:</strong> 4</p>
+        <p><strong>🚗 Garage:</strong> 2</p>
+        <p><strong>📏 Size:</strong> 1000m²</p>
+        <p>🌟 This luxurious 5-bedroom home offers an open-plan kitchen, a spacious living area, a modern home theater, and a beautiful backyard garden.</p>
+
+        <a href="contact.html" class="btn">Message Agent</a>
     </section>
 
     <footer>
         <p>&copy; 2025 Your Real Estate Agency. All rights reserved.</p>
     </footer>
 
+    <script src="script.js"></script>
 </body>
 </html>
