--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="properties.html">Properties</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="FAQ.html">FAQ</a></li>
             </ul>
         </nav>
     </header>
