--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="FAQ.html">Properties</a></li>
+                <li><a href="FAQ.html">FAQ</a></li>
             </ul>
         </nav>
     </header>
