--- a/about.html
+++ b/about.html
@@ -37,19 +37,20 @@
         <h2>Meet the Team</h2>
         <div class="ceo">
             <h3>Boitumelo Tlhaselo - CEO</h3>
-            <img src="your-image-here.jpg" alt="Boitumelo Tlhaselo">
+            <img src="https://i.pinimg.com/736x/5e/87/00/5e8700424201eb225c9a7dea4c3ec7f4.jpg" alt="Boitumelo Tlhaselo">
             <p>Boitumelo is the visionary leader behind BT Prime Estate, bringing expertise in real estate, business, and technology to the forefront. Her passion for connecting people with their dream homes has shaped the company’s success.</p>
         </div>
 
         <div class="agents">
             <h3>Our Real Estate Agents</h3>
+            
             <div class="agent">
-                <img src="agent1.jpg" alt="Agent 1">
-                <h4>John Doe</h4>
+                <img src="https://i.pinimg.com/736x/a8/ba/96/a8ba9626de3fadff0b38e1c83cdea435.jpg" alt="Agent 1">
+                <h4>Kelvin Ditlhare</h4>
                 <p>With over 10 years of experience, John is known for his dedication and market expertise, ensuring clients find the perfect property.</p>
             </div>
             <div class="agent">
-                <img src="agent2.jpg" alt="Agent 2">
+                <img src="https://i.pinimg.com/736x/53/86/cb/5386cb9d13ff1c9f958e237fa0320628.jpg" alt="Agent 2">
                 <h4>Jane Smith</h4>
                 <p>Jane specializes in luxury properties, offering personalized service and expert negotiation skills to help buyers and sellers succeed.</p>
             </div>
